--- a/draft/covid19.bib
+++ b/draft/covid19.bib
@@ -55,3 +55,19 @@
    Pages="E156-E165",
    Month="09"
 }
+
+@article{10.1093/jamia/ocaa280,
+    author = {Qiao, Zhi and Bae, Austin and Glass, Lucas M and Xiao, Cao and Sun, Jimeng},
+    title = "{FLANNEL (Focal Loss bAsed Neural Network EnsembLe) for COVID-19 detection}",
+    journal = {Journal of the American Medical Informatics Association},
+    volume = {28},
+    number = {3},
+    pages = {444-452},
+    year = {2020},
+    month = {10},
+    abstract = "{The study sought to test the possibility of differentiating chest x-ray images of coronavirus disease 2019 (COVID-19) against other pneumonia and healthy patients using deep neural networks.We construct the radiography (x-ray) imaging data from 2 publicly available sources, which include 5508 chest x-ray images across 2874 patients with 4 classes: normal, bacterial pneumonia, non–COVID-19 viral pneumonia, and COVID-19. To identify COVID-19, we propose a FLANNEL (Focal Loss bAsed Neural Network EnsembLe) model, a flexible module to ensemble several convolutional neural network models and fuse with a focal loss for accurate COVID-19 detection on class imbalance data.FLANNEL consistently outperforms baseline models on COVID-19 identification task in all metrics. Compared with the best baseline, FLANNEL shows a higher macro-F1 score, with 6\\% relative increase on the COVID-19 identification task, in which it achieves precision of 0.7833 ± 0.07, recall of 0.8609 ± 0.03, and F1 score of 0.8168 ± 0.03.Ensemble learning that combines multiple independent basis classifiers can increase the robustness and accuracy. We propose a neural weighing module to learn the importance weight for each base model and combine them via weighted ensemble to get the final classification results. In order to handle the class imbalance challenge, we adapt focal loss to our multiple classification task as the loss function.FLANNEL effectively combines state-of-the-art convolutional neural network classification models and tackles class imbalance with focal loss to achieve better performance on COVID-19 detection from x-rays.}",
+    issn = {1527-974X},
+    doi = {10.1093/jamia/ocaa280},
+    url = {https://doi.org/10.1093/jamia/ocaa280},
+    eprint = {https://academic.oup.com/jamia/article-pdf/28/3/444/36428807/ocaa280.pdf},
+}
