Replace contactless learning

--- a/draft/covid19.bib
+++ b/draft/covid19.bib
@@ -1,73 +1,88 @@
 @misc{lin2018focal,
-      title={Focal Loss for Dense Object Detection}, 
-      author={Tsung-Yi Lin and Priya Goyal and Ross Girshick and Kaiming He and Piotr Dollár},
-      year={2018},
-      eprint={1708.02002},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV}
+  title         = {Focal Loss for Dense Object Detection},
+  author        = {Tsung-Yi Lin and Priya Goyal and Ross Girshick and Kaiming He and Piotr Dollár},
+  year          = {2018},
+  eprint        = {1708.02002},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CV}
 }
 
-@ARTICLE{9084097,
+@article{9084097,
+  author  = {S. {Karanam} and R. {Li} and F. {Yang} and W. {Hu} and T. {Chen} and Z. {Wu}},
+  journal = {IEEE Transactions on Medical Imaging},
+  title   = {Towards Contactless Patient Positioning},
+  year    = {2020},
+  volume  = {39},
+  number  = {8},
+  pages   = {2701-2710},
+  doi     = {10.1109/TMI.2020.2991954}
+}
 
-  author={S. {Karanam} and R. {Li} and F. {Yang} and W. {Hu} and T. {Chen} and Z. {Wu}},
-
-  journal={IEEE Transactions on Medical Imaging}, 
-
-  title={Towards Contactless Patient Positioning}, 
-
-  year={2020},
-
-  volume={39},
-
-  number={8},
-
-  pages={2701-2710},
-
-  doi={10.1109/TMI.2020.2991954}}
-
-@Article{pmid32396075,
-   Author="Oh, Y.  and Park, S.  and Ye, J. C. ",
-   Title="{{D}eep {L}earning {C}{O}{V}{I}{D}-19 {F}eatures on {C}{X}{R} {U}sing {L}imited {T}raining {D}ata {S}ets}",
-   Journal="IEEE Trans Med Imaging",
-   Year="2020",
-   Volume="39",
-   Number="8",
-   Pages="2688--2700",
-   Month="08"
+@article{pmid32396075,
+  author  = {Oh, Y.  and Park, S.  and Ye, J. C. },
+  title   = {{{D}eep {L}earning {C}{O}{V}{I}{D}-19 {F}eatures on {C}{X}{R} {U}sing {L}imited {T}raining {D}ata {S}ets}},
+  journal = {IEEE Trans Med Imaging},
+  year    = {2020},
+  volume  = {39},
+  number  = {8},
+  pages   = {2688--2700},
+  month   = {08}
 }
 
 @misc{wang2020covidnet,
-      title={COVID-Net: A Tailored Deep Convolutional Neural Network Design for Detection of COVID-19 Cases from Chest X-Ray Images}, 
-      author={Linda Wang and Alexander Wong},
-      year={2020},
-      eprint={2003.09871},
-      archivePrefix={arXiv},
-      primaryClass={eess.IV}
+  title         = {COVID-Net: A Tailored Deep Convolutional Neural Network Design for Detection of COVID-19 Cases from Chest X-Ray Images},
+  author        = {Linda Wang and Alexander Wong},
+  year          = {2020},
+  eprint        = {2003.09871},
+  archiveprefix = {arXiv},
+  primaryclass  = {eess.IV}
 }
 
-@Article{pmid32339081,
-   Author="Bai, H. X.  and Wang, R.  and Xiong, Z.  and Hsieh, B.  and Chang, K.  and Halsey, K.  and Tran, T. M. L.  and Choi, J. W.  and Wang, D. C.  and Shi, L. B.  and Mei, J.  and Jiang, X. L.  and Pan, I.  and Zeng, Q. H.  and Hu, P. F.  and Li, Y. H.  and Fu, F. X.  and Huang, R. Y.  and Sebro, R.  and Yu, Q. Z.  and Atalay, M. K.  and Liao, W. H. ",
-   Title="{{A}rtificial {I}ntelligence {A}ugmentation of {R}adiologist {P}erformance in {D}istinguishing {C}{O}{V}{I}{D}-19 from {P}neumonia of {O}ther {O}rigin at {C}hest {C}{T}}",
-   Journal="Radiology",
-   Year="2020",
-   Volume="296",
-   Number="3",
-   Pages="E156-E165",
-   Month="09"
+@article{pmid32339081,
+  author  = {Bai, H. X.  and Wang, R.  and Xiong, Z.  and Hsieh, B.  and Chang, K.  and Halsey, K.  and Tran, T. M. L.  and Choi, J. W.  and Wang, D. C.  and Shi, L. B.  and Mei, J.  and Jiang, X. L.  and Pan, I.  and Zeng, Q. H.  and Hu, P. F.  and Li, Y. H.  and Fu, F. X.  and Huang, R. Y.  and Sebro, R.  and Yu, Q. Z.  and Atalay, M. K.  and Liao, W. H. },
+  title   = {{{A}rtificial {I}ntelligence {A}ugmentation of {R}adiologist {P}erformance in {D}istinguishing {C}{O}{V}{I}{D}-19 from {P}neumonia of {O}ther {O}rigin at {C}hest {C}{T}}},
+  journal = {Radiology},
+  year    = {2020},
+  volume  = {296},
+  number  = {3},
+  pages   = {E156-E165},
+  month   = {09}
 }
 
 @article{10.1093/jamia/ocaa280,
-    author = {Qiao, Zhi and Bae, Austin and Glass, Lucas M and Xiao, Cao and Sun, Jimeng},
-    title = "{FLANNEL (Focal Loss bAsed Neural Network EnsembLe) for COVID-19 detection}",
-    journal = {Journal of the American Medical Informatics Association},
-    volume = {28},
-    number = {3},
-    pages = {444-452},
-    year = {2020},
-    month = {10},
-    abstract = "{The study sought to test the possibility of differentiating chest x-ray images of coronavirus disease 2019 (COVID-19) against other pneumonia and healthy patients using deep neural networks.We construct the radiography (x-ray) imaging data from 2 publicly available sources, which include 5508 chest x-ray images across 2874 patients with 4 classes: normal, bacterial pneumonia, non–COVID-19 viral pneumonia, and COVID-19. To identify COVID-19, we propose a FLANNEL (Focal Loss bAsed Neural Network EnsembLe) model, a flexible module to ensemble several convolutional neural network models and fuse with a focal loss for accurate COVID-19 detection on class imbalance data.FLANNEL consistently outperforms baseline models on COVID-19 identification task in all metrics. Compared with the best baseline, FLANNEL shows a higher macro-F1 score, with 6\\% relative increase on the COVID-19 identification task, in which it achieves precision of 0.7833 ± 0.07, recall of 0.8609 ± 0.03, and F1 score of 0.8168 ± 0.03.Ensemble learning that combines multiple independent basis classifiers can increase the robustness and accuracy. We propose a neural weighing module to learn the importance weight for each base model and combine them via weighted ensemble to get the final classification results. In order to handle the class imbalance challenge, we adapt focal loss to our multiple classification task as the loss function.FLANNEL effectively combines state-of-the-art convolutional neural network classification models and tackles class imbalance with focal loss to achieve better performance on COVID-19 detection from x-rays.}",
-    issn = {1527-974X},
-    doi = {10.1093/jamia/ocaa280},
-    url = {https://doi.org/10.1093/jamia/ocaa280},
-    eprint = {https://academic.oup.com/jamia/article-pdf/28/3/444/36428807/ocaa280.pdf},
+  author   = {Qiao, Zhi and Bae, Austin and Glass, Lucas M and Xiao, Cao and Sun, Jimeng},
+  title    = {{FLANNEL (Focal Loss bAsed Neural Network EnsembLe) for COVID-19 detection}},
+  journal  = {Journal of the American Medical Informatics Association},
+  volume   = {28},
+  number   = {3},
+  pages    = {444-452},
+  year     = {2020},
+  month    = {10},
+  abstract = {{The study sought to test the possibility of differentiating chest x-ray images of coronavirus disease 2019 (COVID-19) against other pneumonia and healthy patients using deep neural networks.We construct the radiography (x-ray) imaging data from 2 publicly available sources, which include 5508 chest x-ray images across 2874 patients with 4 classes: normal, bacterial pneumonia, non–COVID-19 viral pneumonia, and COVID-19. To identify COVID-19, we propose a FLANNEL (Focal Loss bAsed Neural Network EnsembLe) model, a flexible module to ensemble several convolutional neural network models and fuse with a focal loss for accurate COVID-19 detection on class imbalance data.FLANNEL consistently outperforms baseline models on COVID-19 identification task in all metrics. Compared with the best baseline, FLANNEL shows a higher macro-F1 score, with 6\\% relative increase on the COVID-19 identification task, in which it achieves precision of 0.7833 ± 0.07, recall of 0.8609 ± 0.03, and F1 score of 0.8168 ± 0.03.Ensemble learning that combines multiple independent basis classifiers can increase the robustness and accuracy. We propose a neural weighing module to learn the importance weight for each base model and combine them via weighted ensemble to get the final classification results. In order to handle the class imbalance challenge, we adapt focal loss to our multiple classification task as the loss function.FLANNEL effectively combines state-of-the-art convolutional neural network classification models and tackles class imbalance with focal loss to achieve better performance on COVID-19 detection from x-rays.}},
+  issn     = {1527-974X},
+  doi      = {10.1093/jamia/ocaa280},
+  url      = {https://doi.org/10.1093/jamia/ocaa280},
+  eprint   = {https://academic.oup.com/jamia/article-pdf/28/3/444/36428807/ocaa280.pdf}
+}
+
+@article{58871,
+  author  = {L. K. {Hansen} and P. {Salamon}},
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  title   = {Neural network ensembles},
+  year    = {1990},
+  volume  = {12},
+  number  = {10},
+  pages   = {993-1001},
+  doi     = {10.1109/34.58871}
+}
+
+@article{combine,
+  author  = {Sharkey, Amanda},
+  year    = {1996},
+  month   = {12},
+  pages   = {299-314},
+  title   = {On Combining Artificial Neural Nets},
+  volume  = {8},
+  journal = {Connect. Sci.},
+  doi     = {10.1080/095400996116785}
 }
