Format abstract and introduction

--- a/draft/covid19.bib
+++ b/draft/covid19.bib
@@ -86,3 +86,22 @@
   journal = {Connect. Sci.},
   doi     = {10.1080/095400996116785}
 }
+
+@article{DBLP:journals/corr/JegouDVRB16,
+  author        = {Simon J{\'{e}}gou and
+               Michal Drozdzal and
+               David V{\'{a}}zquez and
+               Adriana Romero and
+               Yoshua Bengio},
+  title         = {The One Hundred Layers Tiramisu: Fully Convolutional DenseNets for
+               Semantic Segmentation},
+  journal       = {CoRR},
+  volume        = {abs/1611.09326},
+  year          = {2016},
+  url           = {http://arxiv.org/abs/1611.09326},
+  archiveprefix = {arXiv},
+  eprint        = {1611.09326},
+  timestamp     = {Mon, 13 Aug 2018 16:48:07 +0200},
+  biburl        = {https://dblp.org/rec/journals/corr/JegouDVRB16.bib},
+  bibsource     = {dblp computer science bibliography, https://dblp.org}
+}
