--- a/draft/covid19.bib
+++ b/draft/covid19.bib
@@ -105,3 +105,12 @@
   biburl        = {https://dblp.org/rec/journals/corr/JegouDVRB16.bib},
   bibsource     = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{pmid33564340,
+  author  = {Mukherjee, H.  and Ghosh, S.  and Dhar, A.  and Obaidullah, S. M.  and Santosh, K. C.  and Roy, K. },
+  title   = {{{S}hallow {C}onvolutional {N}eural {N}etwork for {C}{O}{V}{I}{D}-19 {O}utbreak {S}creening {U}sing {C}hest {X}-rays}},
+  journal = {Cognit Comput},
+  year    = {2021},
+  pages   = {1--14},
+  month   = {Feb}
+}
