--- a/draft/covid19.bib
+++ b/draft/covid19.bib
@@ -114,3 +114,11 @@
   pages   = {1--14},
   month   = {Feb}
 }
+
+@article{cohen2020covidProspective,
+  title={COVID-19 Image Data Collection: Prospective Predictions Are the Future},
+  author={Joseph Paul Cohen and Paul Morrison and Lan Dao and Karsten Roth and Tim Q Duong and Marzyeh Ghassemi},
+  journal={arXiv 2006.11988},
+  url={https://github.com/ieee8023/covid-chestxray-dataset},
+  year={2020}
+}
