--- a/draft/covid19.bib
+++ b/draft/covid19.bib
@@ -116,9 +116,18 @@
 }
 
 @article{cohen2020covidProspective,
-  title={COVID-19 Image Data Collection: Prospective Predictions Are the Future},
-  author={Joseph Paul Cohen and Paul Morrison and Lan Dao and Karsten Roth and Tim Q Duong and Marzyeh Ghassemi},
-  journal={arXiv 2006.11988},
-  url={https://github.com/ieee8023/covid-chestxray-dataset},
-  year={2020}
+  title   = {COVID-19 Image Data Collection: Prospective Predictions Are the Future},
+  author  = {Joseph Paul Cohen and Paul Morrison and Lan Dao and Karsten Roth and Tim Q Duong and Marzyeh Ghassemi},
+  journal = {arXiv 2006.11988},
+  url     = {https://github.com/ieee8023/covid-chestxray-dataset},
+  year    = {2020}
+}
+
+@techreport{whocovid1920-apr-21,
+  author      = {{WHO Emergency Response Team}},
+  title       = {Weekly epidemiological update on COVID-19 - 20 April 2021},
+  institution = {WHO},
+  year        = {2021},
+  month       = {April},
+  url         = {https://www.who.int/publications/m/item/weekly-epidemiological-update-on-covid-19---20-april-2021}
 }
