--- a/doc/covid19.bib
+++ b/doc/covid19.bib
@@ -131,3 +131,24 @@
   month       = {April},
   url         = {https://www.who.int/publications/m/item/weekly-epidemiological-update-on-covid-19---20-april-2021}
 }
+
+
+@inproceedings{10.1145/1143844.1143874,
+author = {Davis, Jesse and Goadrich, Mark},
+title = {The Relationship between Precision-Recall and ROC Curves},
+year = {2006},
+isbn = {1595933832},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1143844.1143874},
+doi = {10.1145/1143844.1143874},
+abstract = {Receiver Operator Characteristic (ROC) curves are commonly used to present results for binary decision problems in machine learning. However, when dealing with highly skewed datasets, Precision-Recall (PR) curves give a more informative picture of an algorithm's performance. We show that a deep connection exists between ROC space and PR space, such that a curve dominates in ROC space if and only if it dominates in PR space. A corollary is the notion of an achievable PR curve, which has properties much like the convex hull in ROC space; we show an efficient algorithm for computing this curve. Finally, we also note differences in the two types of curves are significant for algorithm design. For example, in PR space it is incorrect to linearly interpolate between points. Furthermore, algorithms that optimize the area under the ROC curve are not guaranteed to optimize the area under the PR curve.},
+booktitle = {Proceedings of the 23rd International Conference on Machine Learning},
+pages = {233–240},
+numpages = {8},
+location = {Pittsburgh, Pennsylvania, USA},
+series = {ICML '06}
+}
+
+  
+
