Update README file

--- a/doc/covid19.bib
+++ b/doc/covid19.bib
@@ -150,5 +150,16 @@ location = {Pittsburgh, Pennsylvania, USA},
 series = {ICML '06}
 }
 
+
+@Article{pmid32730215,
+   Author="Wang, G.  and Liu, X.  and Li, C.  and Xu, Z.  and Ruan, J.  and Zhu, H.  and Meng, T.  and Li, K.  and Huang, N.  and Zhang, S. ",
+   Title="{{A} {N}oise-{R}obust {F}ramework for {A}utomatic {S}egmentation of {C}{O}{V}{I}{D}-19 {P}neumonia {L}esions {F}rom {C}{T} {I}mages}",
+   Journal="IEEE Trans Med Imaging",
+   Year="2020",
+   Volume="39",
+   Number="8",
+   Pages="2653--2663",
+   Month="08"
+}
   
 
