--- a/doc/covid19.bib
+++ b/doc/covid19.bib
@@ -161,5 +161,35 @@ series = {ICML '06}
    Pages="2653--2663",
    Month="08"
 }
+
+@article{Narin_2021,
+   title={Automatic detection of coronavirus disease (COVID-19) using X-ray images and deep convolutional neural networks},
+   ISSN={1433-755X},
+   url={http://dx.doi.org/10.1007/s10044-021-00984-y},
+   DOI={10.1007/s10044-021-00984-y},
+   journal={Pattern Analysis and Applications},
+   publisher={Springer Science and Business Media LLC},
+   author={Narin, Ali and Kaya, Ceren and Pamuk, Ziynet},
+   year={2021},
+   month={May}
+}
+
+@misc{hemdan2020covidxnet,
+      title={COVIDX-Net: A Framework of Deep Learning Classifiers to Diagnose COVID-19 in X-Ray Images}, 
+      author={Ezz El-Din Hemdan and Marwa A. Shouman and Mohamed Esmail Karar},
+      year={2020},
+      eprint={2003.11055},
+      archivePrefix={arXiv},
+      primaryClass={eess.IV}
+}
+
+@misc{farooq2020covidresnet,
+      title={COVID-ResNet: A Deep Learning Framework for Screening of COVID19 from Radiographs}, 
+      author={Muhammad Farooq and Abdul Hafeez},
+      year={2020},
+      eprint={2003.14395},
+      archivePrefix={arXiv},
+      primaryClass={eess.IV}
+}
   
 
