--- a/doc/covid19.bib
+++ b/doc/covid19.bib
@@ -134,62 +134,62 @@
 
 
 @inproceedings{10.1145/1143844.1143874,
-author = {Davis, Jesse and Goadrich, Mark},
-title = {The Relationship between Precision-Recall and ROC Curves},
-year = {2006},
-isbn = {1595933832},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/1143844.1143874},
-doi = {10.1145/1143844.1143874},
-abstract = {Receiver Operator Characteristic (ROC) curves are commonly used to present results for binary decision problems in machine learning. However, when dealing with highly skewed datasets, Precision-Recall (PR) curves give a more informative picture of an algorithm's performance. We show that a deep connection exists between ROC space and PR space, such that a curve dominates in ROC space if and only if it dominates in PR space. A corollary is the notion of an achievable PR curve, which has properties much like the convex hull in ROC space; we show an efficient algorithm for computing this curve. Finally, we also note differences in the two types of curves are significant for algorithm design. For example, in PR space it is incorrect to linearly interpolate between points. Furthermore, algorithms that optimize the area under the ROC curve are not guaranteed to optimize the area under the PR curve.},
-booktitle = {Proceedings of the 23rd International Conference on Machine Learning},
-pages = {233–240},
-numpages = {8},
-location = {Pittsburgh, Pennsylvania, USA},
-series = {ICML '06}
+  author    = {Davis, Jesse and Goadrich, Mark},
+  title     = {The Relationship between Precision-Recall and ROC Curves},
+  year      = {2006},
+  isbn      = {1595933832},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/1143844.1143874},
+  doi       = {10.1145/1143844.1143874},
+  abstract  = {Receiver Operator Characteristic (ROC) curves are commonly used to present results for binary decision problems in machine learning. However, when dealing with highly skewed datasets, Precision-Recall (PR) curves give a more informative picture of an algorithm's performance. We show that a deep connection exists between ROC space and PR space, such that a curve dominates in ROC space if and only if it dominates in PR space. A corollary is the notion of an achievable PR curve, which has properties much like the convex hull in ROC space; we show an efficient algorithm for computing this curve. Finally, we also note differences in the two types of curves are significant for algorithm design. For example, in PR space it is incorrect to linearly interpolate between points. Furthermore, algorithms that optimize the area under the ROC curve are not guaranteed to optimize the area under the PR curve.},
+  booktitle = {Proceedings of the 23rd International Conference on Machine Learning},
+  pages     = {233–240},
+  numpages  = {8},
+  location  = {Pittsburgh, Pennsylvania, USA},
+  series    = {ICML '06}
 }
 
 
-@Article{pmid32730215,
-   Author="Wang, G.  and Liu, X.  and Li, C.  and Xu, Z.  and Ruan, J.  and Zhu, H.  and Meng, T.  and Li, K.  and Huang, N.  and Zhang, S. ",
-   Title="{{A} {N}oise-{R}obust {F}ramework for {A}utomatic {S}egmentation of {C}{O}{V}{I}{D}-19 {P}neumonia {L}esions {F}rom {C}{T} {I}mages}",
-   Journal="IEEE Trans Med Imaging",
-   Year="2020",
-   Volume="39",
-   Number="8",
-   Pages="2653--2663",
-   Month="08"
+@article{pmid32730215,
+  author  = {Wang, G.  and Liu, X.  and Li, C.  and Xu, Z.  and Ruan, J.  and Zhu, H.  and Meng, T.  and Li, K.  and Huang, N.  and Zhang, S. },
+  title   = {{{A} {N}oise-{R}obust {F}ramework for {A}utomatic {S}egmentation of {C}{O}{V}{I}{D}-19 {P}neumonia {L}esions {F}rom {C}{T} {I}mages}},
+  journal = {IEEE Trans Med Imaging},
+  year    = {2020},
+  volume  = {39},
+  number  = {8},
+  pages   = {2653--2663},
+  month   = {08}
 }
 
 @article{Narin_2021,
-   title={Automatic detection of coronavirus disease (COVID-19) using X-ray images and deep convolutional neural networks},
-   ISSN={1433-755X},
-   url={http://dx.doi.org/10.1007/s10044-021-00984-y},
-   DOI={10.1007/s10044-021-00984-y},
-   journal={Pattern Analysis and Applications},
-   publisher={Springer Science and Business Media LLC},
-   author={Narin, Ali and Kaya, Ceren and Pamuk, Ziynet},
-   year={2021},
-   month={May}
+  title     = {Automatic detection of coronavirus disease (COVID-19) using X-ray images and deep convolutional neural networks},
+  issn      = {1433-755X},
+  url       = {http://dx.doi.org/10.1007/s10044-021-00984-y},
+  doi       = {10.1007/s10044-021-00984-y},
+  journal   = {Pattern Analysis and Applications},
+  publisher = {Springer Science and Business Media LLC},
+  author    = {Narin, Ali and Kaya, Ceren and Pamuk, Ziynet},
+  year      = {2021},
+  month     = {May}
 }
 
 @misc{hemdan2020covidxnet,
-      title={COVIDX-Net: A Framework of Deep Learning Classifiers to Diagnose COVID-19 in X-Ray Images}, 
-      author={Ezz El-Din Hemdan and Marwa A. Shouman and Mohamed Esmail Karar},
-      year={2020},
-      eprint={2003.11055},
-      archivePrefix={arXiv},
-      primaryClass={eess.IV}
+  title         = {COVIDX-Net: A Framework of Deep Learning Classifiers to Diagnose COVID-19 in X-Ray Images},
+  author        = {Ezz El-Din Hemdan and Marwa A. Shouman and Mohamed Esmail Karar},
+  year          = {2020},
+  eprint        = {2003.11055},
+  archiveprefix = {arXiv},
+  primaryclass  = {eess.IV}
 }
 
 @misc{farooq2020covidresnet,
-      title={COVID-ResNet: A Deep Learning Framework for Screening of COVID19 from Radiographs}, 
-      author={Muhammad Farooq and Abdul Hafeez},
-      year={2020},
-      eprint={2003.14395},
-      archivePrefix={arXiv},
-      primaryClass={eess.IV}
+  title         = {COVID-ResNet: A Deep Learning Framework for Screening of COVID19 from Radiographs},
+  author        = {Muhammad Farooq and Abdul Hafeez},
+  year          = {2020},
+  eprint        = {2003.14395},
+  archiveprefix = {arXiv},
+  primaryclass  = {eess.IV}
 }
   
 
